--- a/src/main/resources/resource.properties
+++ b/src/main/resources/resource.properties
@@ -1,15 +1,5 @@
-url = db.bus.com.ua
-port = 5053
-so.timeout = 60000
-pool.size = 300
-prefix = 00
-agent = test
-from = test
-to = db.bus.com.ua
-workplace = gillsoft.tech
-min.price = 1500
-connect = 0.75
-regularity = 80
+url = http://test.e-bilet.ua
+merchant.id=ackio.etravels.00000001
 request.timeout=300000
 request.search.timeout=10000
 
